Fixing overlay layout issue in feature sliders

--- a/app/assets/stylesheets/components/_feature.scss
+++ b/app/assets/stylesheets/components/_feature.scss
@@ -123,9 +123,9 @@
     &::before {
       top: 0;
       left: 0;
-      right: 0;
       bottom: 0;
       z-index: 1;
+      width: 150%;
       content: '';
       position: absolute;
       background: rgba(0,0,0,0.35);
